--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fake-json": "json-server ./assets/db.json --watch --port 30001"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "class-names": "^1.0.0",
+    "json-server": "^0.16.3",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
