--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "class-names": "^1.0.0",
     "json-server": "^0.16.3",
     "next": "11.1.0",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
     "sass": "^1.38.2"
   },
   "devDependencies": {
