--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fake-json": "json-server ./assets/db.json --watch --port 30001"
+    "fake-json": "json-server ./assets/db.json --watch --port 3001"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -19,6 +19,8 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.38.2"
   },
   "devDependencies": {
