--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "class-names": "^1.0.0",
+    "immer": "^9.0.6",
     "json-server": "^0.16.3",
     "next": "11.1.0",
     "prop-types": "^15.7.2",
