--- a/package.json
+++ b/package.json
@@ -10,21 +10,18 @@
     "server": "json-server ./assets/db.json --watch --port 3001"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@types/uuid": "^8.3.4",
-    "axios": "^0.21.1",
+    "axios": "^0.27.2",
     "class-names": "^1.0.0",
-    "immer": "^9.0.6",
     "json-server": "^0.16.3",
-    "next": "11.1.0",
-    "prop-types": "^15.7.2",
-    "react": "17.0.2",
+    "next": "12.1.6",
+    "react": "18.2.0",
     "react-content-loader": "^6.0.3",
-    "react-dom": "17.0.2",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.1",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.38.2"
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
@@ -32,6 +29,6 @@
     "@types/react-dom": "^17.0.14",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.7.4"
   }
 }
