--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-names": "^1.0.0",
     "json-server": "^0.16.3",
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-content-loader": "^6.0.3",
     "react-dom": "18.2.0",
